# customPolls

./: db.sqlite3  docker-compose.yml  pyproject.toml  readme.md
base/: settings.py  urls.py
docker/: FrontendDockerfile  frontend_setup.sh
front/: .env  package-lock.json  package.json
front/src/: App.vue  main.js
front/src/components/: HeaderLogin.vue  HomePage.vue  QuectionComponent.vue
front/src/router/: index.js
front/src/store/: index.js
front/src/utils/: auth.js  index.js  messages.js
front/src/views/: HomeView.vue  LoginPage.vue  PollView.vue
polls/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templatetags/: poll_forms.py
templates/: index_page.html
templates/forms/: base_form.html  poll_field.html  poll_form.html
